# gammy

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README-wip.md  README.md  api.html  backlog.html  default.nix  features-1.py  features-2.py  features-3.py  features-4.py  features-5.py  features-7.py  features-8.py  features.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  shell.nix  walkthrough-1.py  walkthrough-4.py  walkthrough-5.py  walkthrough.html
_autosummary/: gammy.arraymapper.ArrayMapper.html  gammy.arraymapper.html  gammy.arraymapper.lift.html  gammy.arraymapper.x.html  gammy.formulae.BSpline1d.html  gammy.formulae.ExpSineSquared1d.html  gammy.formulae.ExpSquared1d.html  gammy.formulae.Flatten.html  gammy.formulae.FlippedReLU.html  gammy.formulae.Formula.html  gammy.formulae.Function.html  gammy.formulae.Gaussian1d.html  gammy.formulae.Kron.html  gammy.formulae.Line.html  gammy.formulae.OrnsteinUhlenbeck1d.html  gammy.formulae.Polynomial.html  gammy.formulae.RationalQuadratic1d.html  gammy.formulae.ReLU.html  gammy.formulae.Scalar.html  gammy.formulae.Sum.html  gammy.formulae.TanH.html  gammy.formulae.WhiteNoise1d.html  gammy.formulae.create_from_kernel1d.html  gammy.formulae.design_matrix.html  gammy.formulae.html  gammy.models.bayespy.GAM.html  gammy.models.bayespy.LinearModel.html  gammy.models.bayespy.create_gaussian_theta.html  gammy.models.bayespy.html  gammy.models.html  gammy.models.numpy.Delta.html  (+43 more)
(+115 files in other folders)
