#
#    _|_|_|    _|_|_|  _|_|_|  _|_|    _|_|_|  _|_|    _|    _|
#  _|    _|  _|    _|  _|    _|    _|  _|    _|    _|  _|    _|
#  _|    _|  _|    _|  _|    _|    _|  _|    _|    _|  _|    _|
#    _|_|_|    _|_|_|  _|    _|    _|  _|    _|    _|    _|_|_|
#        _|                                                  _|
#    _|_|                                                _|_|
#

[metadata]
version = 0.5.3
name = gammy
author = Stratos Staboulis <stratos@stratokraft.fi>
maintainer = Stratos Staboulis <stratos@stratokraft.fi>
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = bayesian, statistics, modeling, gaussian processes, splines
description = Generalized additive models with a Bayesian twist
long_description = file: README.md
long_description_content_type = text/markdown
url = https://malmgrek.github.io/gammy

[options]
packages = find:
install_requires =
    numpy>=1.10.0
    scipy>=0.13.0
    bayespy
    h5py
python_requires >= 3.8

[options.extras_require]
test =
    pytest
dev =
    matplotlib
doc =
    sphinx
    numpydoc
